--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -3,14 +3,27 @@
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <nav class="navbar navbar-expand-lg navbar-light bg-light" th:fragment="navbar">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#" >Taxi</a>
+        <a class="navbar-brand" href="#" >Archive</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/" th:text="#{home.page}"></a>
+                    <a class="nav-link" aria-current="page" href="/" >Home</a>
+                </li>
+                <div th:if="${#authorization.expression('isAuthenticated()')}">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/your-works" >Your works</a>
+                </li>
+                </div>
+                <div th:if="${#authorization.expression('isAuthenticated()')}">
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/new-works" > New works</a>
+                </li>
+                </div>
+                <li class="nav-item">
+                    <a class="nav-link" aria-current="page" href="/published-works">Published works</a>
                 </li>
             </ul>
             <div>
