--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title></title>
-</head>
+<html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
+      xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
+<head th:replace="/fragments/head :: head"></head>
 <body>
+<div class="container">
+<header th:replace="/fragments/navbar :: navbar"></header>
 <h1>Good evening, we are from Ukraine</h1>
 <h2>Rusni pyzda</h2>
+    <div/>
 </body>
 </html>
