--- a/src/main/resources/templates/workReviews.html
+++ b/src/main/resources/templates/workReviews.html
@@ -4,6 +4,7 @@
 <head th:replace="/fragments/head :: head"></head>
 <body>
 <div class="container">
+    <header th:replace="/fragments/navbar :: navbar"></header>
     <div th:text="${work.title}"></div>
     <div th:text="${work.annotation}"></div>
     <table class="table">
