--- a/src/main/resources/templates/fragments/navbar.html
+++ b/src/main/resources/templates/fragments/navbar.html
@@ -10,20 +10,20 @@
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/" >Home</a>
+                    <a class="nav-link" aria-current="page" href="/" th:text="#{home.link}"></a>
                 </li>
                 <div th:if="${#authorization.expression('isAuthenticated()')}">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/your-works" >Your works</a>
+                    <a class="nav-link" aria-current="page" href="/your-works" th:text="#{user.works.link}"></a>
                 </li>
                 </div>
                 <div th:if="${#authorization.expression('isAuthenticated()')}">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/new-works" > New works</a>
+                    <a class="nav-link" aria-current="page" href="/new-works" th:text="#{new.works.link}"></a>
                 </li>
                 </div>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/published-works">Published works</a>
+                    <a class="nav-link" aria-current="page" href="/published-works" th:text="#{published.works.link}"></a>
                 </li>
             </ul>
             <div>
