--- a/src/main/resources/templates/workReviews.html
+++ b/src/main/resources/templates/workReviews.html
@@ -10,10 +10,10 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col" >Date</th>
-            <th scope="col" >Text</th>
-            <th scope="col">Rate</th>
-            <th scope="col">User</th>
+            <th scope="col" th:text="#{date.review}"></th>
+            <th scope="col" th:text="#{text.review}">Text</th>
+            <th scope="col" th:text="#{rate.review}">Rate</th>
+            <th scope="col" th:text="#{user.review}">User</th>
         </tr>
         </thead>
         <tbody>
