Publish and depublish functions

--- a/src/main/resources/templates/newWorks.html
+++ b/src/main/resources/templates/newWorks.html
@@ -22,6 +22,7 @@
             <td th:text="${#temporals.format(work.sendingDate, 'dd-MM-yyyy HH:mm')}"> </td>
             <td th:text="${work.annotation}"> </td>
             <td th:text="${work.title}"> </td>
+            <td><a class="btn btn-outline-primary" th:href="@{|/new-works/publish-work/${work.id}|}" th:text="#{publish.button}"></a></td>
         </tr>
         </tbody>
     </table>
