--- a/src/main/resources/templates/publishedWorks.html
+++ b/src/main/resources/templates/publishedWorks.html
@@ -5,6 +5,10 @@
 <body>
 <div class="container">
     <header th:replace="/fragments/navbar :: navbar"></header>
+    <form th:action="@{/published-works}">
+        <input  type="text" th:name="title" th:value="${title}">
+        <div><button class="btn" type="submit"  th:text="#{find.button}"></button></div>
+    </form>
     <table class="table">
         <thead>
         <tr>
@@ -15,8 +19,8 @@
         </thead>
         <tbody>
         <td>
-            <a class="btn btn-outline-primary" th:href="@{/published-works(sort='DESC', nameBy='sendingDate')}" th:text="#{sort.descending}"></a>
-            <a class="btn btn-outline-primary" th:href="@{/published-works(sort='ASC', nameBy='sendingDate')}"  th:text="#{sort.ascending}" ></a>
+            <a class="btn btn-outline-primary" th:href="@{/published-works(sort='DESC', nameBy='sendingDate' , title=${title})}" th:text="#{sort.descending}"></a>
+            <a class="btn btn-outline-primary" th:href="@{/published-works(sort='ASC', nameBy='sendingDate' , title=${title})}"  th:text="#{sort.ascending}" ></a>
         </td>
         <tr scope="row" th:each="work : ${works.content}">
             <td th:text="${#temporals.format(work.sendingDate, 'dd-MM-yyyy HH:mm')}"> </td>
