Add some buttons

--- a/src/main/resources/templates/userWorks.html
+++ b/src/main/resources/templates/userWorks.html
@@ -5,6 +5,7 @@
 <body>
 <div class="container">
     <header th:replace="/fragments/navbar :: navbar"></header>
+    <a class="btn btn-outline-primary" th:href="@{/upload-work}" th:text="#{upload.work.button}"/>
     <table class="table">
         <thead>
         <tr>
