--- a/src/main/resources/templates/publishedWorks.html
+++ b/src/main/resources/templates/publishedWorks.html
@@ -26,6 +26,7 @@
             <td th:text="${#temporals.format(work.sendingDate, 'dd-MM-yyyy HH:mm')}"> </td>
             <td th:text="${work.annotation}"> </td>
             <td th:text="${work.title}"> </td>
+            <td><a class="btn btn-outline-primary" th:href="@{|/published-works/${work.id}|}" th:text="#{details.work}"></a></td>
             <td><a class="btn btn-outline-primary" th:href="@{|/new-works/publish-work/${work.id}|}" th:text="#{depublish.button}"></a></td>
         </tr>
         </tbody>
