Added form styling for register and login

--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -10,12 +10,16 @@
   <div th:if="${param.logout}">
     <a th:text="#{logout.text}"></a>
   </div>
-  <form th:action="@{/login}" method="post">
-    <div><label><a th:text="#{userName.text}" ></a> <input type="text" name="username"/> </label></div>
-    <div><label> <a th:text="#{password.text}" ></a> <input type="password" name="password"/> </label></div>
+  <form th:action="@{/login}" method="post" class="col-lg-6 offset-lg-3 ">
+    <div class="row justify-content-center">
+      <label th:text="#{userName.text}" />
+      <input class="form-control" type="text" name="username"/>
+      <label th:text="#{password.text}" />
+      <input class="form-control" type="password" name="password"/>
     <div><button class="btn" type="submit"  th:text="#{signIn.button}"></button></div>
+    </div>
   </form>
-  <a href="/registration" th:text="#{addNewUser.text}"></a>
+  <a class="row justify-content-center" href="/registration" th:text="#{addNewUser.text}"></a>
 </div>
 </body>
 </html>
