--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,21 +4,37 @@
 <head th:replace="/fragments/head :: head"></head>
 <body>
 <div class="container">
+    <div class="row justify-content-center">
     <a th:text="#{registration.text }"></a>
-
+    </div>
     <a th:text="${name}"></a>
-    <form th:action="@{/registration}"  method="POST" th:object="${user}" >
-        <div><label><a th:text="#{name.text}"/> <input  th:field="*{firstName}" />
+    <form th:action="@{/registration}"  method="POST" th:object="${user}" class="col-lg-6 offset-lg-3 ">
+        <div class="row justify-content-center">
+        <div>
+            <label th:text="#{name.text}"/>
+            <input class="form-control" th:field="*{firstName}" />
             <a th:if="${#fields.hasErrors('firstName')}" th:errors="*{firstName}">Error</a>
-        </label></div>
-        <div><label> <a th:text="#{lastName.text}"/> <input  th:field="*{lastName}" />
-            <a th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Error</a></label></div>
-        <div><label> <a th:text="#{userName.text}"/> <input  th:field="*{email}" />
-            <a th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</a></label></div>
-        <div><label> <a th:text="#{password.text}"/> <input type="password"  th:field="*{password}" />
-            <a th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error</a></label></div>
-        <div><label><input type="password" th:field="*{matchingPassword}" /></label></div>
+        </div>
+        <div>
+            <label th:text="#{lastName.text}"/>
+            <input class="form-control" th:field="*{lastName}" />
+            <a th:if="${#fields.hasErrors('lastName')}" th:errors="*{lastName}">Error</a>
+        </div>
+        <div>
+            <label th:text="#{userName.text}"/>
+            <input class="form-control" th:field="*{email}" />
+            <a th:if="${#fields.hasErrors('email')}" th:errors="*{email}">Error</a>
+        </div>
+        <div>
+            <label th:text="#{password.text}"/>
+            <input class="form-control" type="password"  th:field="*{password}" />
+            <a th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error</a>
+        </div>
+        <div>
+            <input class="form-control" type="password" th:field="*{matchingPassword}" />
+        </div>
         <div><button class="btn" type="submit"  th:text="#{signUp.button}"></button></div>
+        </div>
     </form>
 </div>
 </body>
