--- a/src/main/resources/templates/createReview.html
+++ b/src/main/resources/templates/createReview.html
@@ -5,16 +5,14 @@
 <body>
 <div class="container">
     <header th:replace="/fragments/navbar :: navbar"></header>
-    <form th:action="@{|/published-works/${work}/create-review|}"  method="POST" >
-        <div>
-            <a th:text="#{text.review}"/>
-            <input type="text" th:name="text" th:value="${review.text}"/>
-        </div>
-        <div>
-            <a th:text="#{rate.review}"/>
-            <input type="number" th:name="rate" th:value="${review.rate}"/>
-        </div>
+    <form th:action="@{|/published-works/${work}/create-review|}"  method="POST"  class="col-lg-6 offset-lg-3 ">
+        <div class="row justify-content-center">
+            <label th:text="#{text.review}"/>
+            <input class="form-control" type="text" th:name="text" th:value="${review.text}"/>
+            <label th:text="#{rate.review}"/>
+            <input class="form-control" type="number" th:name="rate" th:value="${review.rate}"/>
         <div><button class="btn" type="submit"   th:text="#{upload.button}"></button></div>
+        </div>
     </form>
 </div>
 </body>
