--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -4,11 +4,11 @@
 <head th:replace="/fragments/head :: head"></head>
 <body>
 <div class="container">
-  <div th:if="${param.error}">
-    <a th:text="#{errorParam.text}"></a>
+  <div th:if="${param.error}" >
+    <a th:text="#{errorParam.text}" class="row justify-content-center"></a>
   </div>
-  <div th:if="${param.logout}">
-    <a th:text="#{logout.text}"></a>
+  <div th:if="${param.logout}" >
+    <a th:text="#{logout.text}" class="row justify-content-center"></a>
   </div>
   <form th:action="@{/login}" method="post" class="col-lg-6 offset-lg-3 ">
     <div class="row justify-content-center">
