--- a/src/main/resources/templates/uploadWork.html
+++ b/src/main/resources/templates/uploadWork.html
@@ -5,20 +5,16 @@
 <body>
 <div class="container">
     <header th:replace="/fragments/navbar :: navbar"></header>
-    <form th:action="@{/upload-work}"  method="POST"  enctype="multipart/form-data">
-        <div>
-            <a th:text="#{title.work}"/>
-            <input type="text" th:name="title" th:value="${work.title}"/>
-        </div>
-        <div>
-            <a th:text="#{annotation.work}"/>
-            <input type="text" th:name="annotation" th:value="${work.annotation}"/>
-        </div>
-        <div>
-            <a th:text="#{file.work}"/>
-            <input type="file" name="file" />
-        </div>
+    <form th:action="@{/upload-work}"  method="POST"  enctype="multipart/form-data" class="col-lg-6 offset-lg-3 ">
+        <div  class="row justify-content-center">
+            <label th:text="#{title.work}"/>
+            <input class="form-control" type="text" th:name="title" th:value="${work.title}"/>
+            <label th:text="#{annotation.work}"/>
+            <input class="form-control" type="text" th:name="annotation" th:value="${work.annotation}"/>
+            <label th:text="#{file.work}"/>
+            <input class="form-control" type="file" name="file" />
         <div><button class="btn" type="submit"   th:text="#{upload.button}"></button></div>
+        </div>
     </form>
 </div>
 </body>
