--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -2,11 +2,14 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head th:replace="/fragments/head :: head"></head>
-<body>
-<div class="container">
-<header th:replace="/fragments/navbar :: navbar"></header>
-<h1>Good evening, we are from Ukraine</h1>
-<h2>Rusni pyzda</h2>
-    <div/>
+<body class="d-flex flex-column min-vh-100">
+     <div class="container">
+          <header th:replace="/fragments/navbar :: navbar"></header>
+          <h1 th:text="#{ukraine.text}"></h1>
+          <h2 th:text="#{main.title.text}"></h2>
+    </div>
+     <div class="container mt-auto">
+     <footer th:replace="/fragments/footer :: footer"></footer>
+     </div>
 </body>
 </html>
