--- a/src/main/resources/templates/workReviews.html
+++ b/src/main/resources/templates/workReviews.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml" xmlns:th="https://www.thymeleaf.org"
       xmlns:sec="https://www.thymeleaf.org/thymeleaf-extras-springsecurity3">
 <head th:replace="/fragments/head :: head"></head>
-<body>
+<body class="d-flex flex-column min-vh-100">
 <div class="container">
     <header th:replace="/fragments/navbar :: navbar"></header>
     <div th:text="${work.title}"></div>
@@ -52,6 +52,9 @@
                th:class="${pageNumber==reviews.number + 1} ? active"></a>
         </li>
     </ul>
+</div>
+<div class="container mt-auto">
+    <footer th:replace="/fragments/footer :: footer"></footer>
 </div>
 </body>
 </html>
