Added downloading of work and some front changes

--- a/src/main/resources/templates/createReview.html
+++ b/src/main/resources/templates/createReview.html
@@ -11,7 +11,7 @@
             <input class="form-control" type="text" th:name="text" th:value="${review.text}"/>
             <label th:text="#{rate.review}"/>
             <input class="form-control" type="number" th:name="rate" th:value="${review.rate}"/>
-        <div><button class="btn" type="submit"   th:text="#{upload.button}"></button></div>
+        <div><button class="btn" type="submit"   th:text="#{create.review.button}"></button></div>
         </div>
     </form>
 </div>
