--- a/src/main/resources/templates/newWorks.html
+++ b/src/main/resources/templates/newWorks.html
@@ -8,7 +8,7 @@
     <table class="table">
         <thead>
         <tr>
-            <th scope="col" >Send date</th>
+            <th scope="col" th:text="#{send.date.work}"></th>
             <th scope="col" th:text="#{annotation.work}"></th>
             <th scope="col" th:text="#{title.work}"></th>
         </tr>
