--- a/src/main/resources/templates/registration.html
+++ b/src/main/resources/templates/registration.html
@@ -4,7 +4,7 @@
 <head th:replace="/fragments/head :: head"></head>
 <body>
 <div class="container">
-    <a th:text="#{registration.text }" class="row justify-content-center"></a>
+    <label th:text="#{registration.text }" class="row justify-content-center "></label>
     <a th:text="${name}"></a>
     <form th:action="@{/registration}"  method="POST" th:object="${user}" class="col-lg-6 offset-lg-3 ">
         <div class="row justify-content-center">
@@ -29,9 +29,10 @@
             <a th:if="${#fields.hasErrors('password')}" th:errors="*{password}">Error</a>
         </div>
         <div>
+            <label th:text="#{confirm.password.text}"/>
             <input class="form-control" type="password" th:field="*{matchingPassword}" />
         </div>
-        <div><button class="btn" type="submit"  th:text="#{signUp.button}"></button></div>
+        <div><button class="btn btn-success" type="submit"  th:text="#{signUp.button}"></button></div>
         </div>
     </form>
 </div>
